# topkio.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
clients/gemini-client/: Cargo.toml
clients/gemini-client/src/: lib.rs
clients/ollama-client/: Cargo.toml
clients/ollama-client/src/: lib.rs
clients/openai-client/: Cargo.toml
config/: default.toml.example  topkio.toml
cookbook/: README.md
core/src/: api.rs  backend.rs  lib.rs  models.rs  primitive.rs
docs/: roadmap.md
legacy/examples/: chat.rs  gemini.rs  ollama.rs
legacy/src/: agent.rs  constants.rs  lib.rs  openai.rs  primitives.rs  tool.rs  utils.rs
legacy/tests/: topkio.rs
primitive/: Cargo.toml
primitive/src/: api.rs  config.rs  error.rs
providers/google/: Cargo.toml
providers/google/src/gemini/: api.rs  chat_completion.rs
providers/ollama/: Cargo.toml
providers/ollama/src/: lib.rs  ollama.rs
providers/ollama/src/ollama/: api.rs  chat_completion.rs  embed.rs
service/: Cargo.toml
service/src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs
service/src/handlers/: chat_completion.rs
service/src/middleware/: validation.rs
topkio/: Cargo.toml  LICENSE  README.md
topkio-config/: Cargo.toml
topkio-config/src/: config.rs  lib.rs  logging.rs  provider.rs  rate_limit.rs  server.rs
topkio-core/: Cargo.toml
topkio-core/src/: agent.rs  backend.rs  config.rs  error.rs  lib.rs  models.rs  provider.rs
topkio-gemini/: Cargo.toml
topkio-gemini/src/: gemini.rs  lib.rs
topkio-gemini/src/gemini/: chat_completion.rs  data.rs  embed.rs  gemini_impl.rs  primitive.rs
topkio-ollama/: Cargo.toml
topkio-ollama/src/: lib.rs
topkio-providers/: Cargo.toml
topkio-providers/src/: deepseek.rs  error.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  provider.rs
topkio-server/: Cargo.toml
topkio-server/src/: error.rs  handler.rs  lib.rs  main.rs  metrix.rs  server.rs  state.rs
topkio-service/: Cargo.toml
topkio-service/src/: config.rs  handlers.rs  lib.rs  middleware.rs  shutdown.rs
topkio-service/src/handlers/: chat_completion.rs
topkio-service/src/middleware/: auth.rs
topkio/examples/: atoma.rs  chat.rs  gemini.rs  ollama.rs  ollama_tool.rs  one.rs  tool.rs
topkio/src/: agent.rs  atoma.rs  config.rs  constants.rs  error.rs  gemini.rs  lib.rs  main.rs  models.rs  openai.rs  primitives.rs  rate_limit.rs  router.rs  tool.rs  utils.rs
topkio/src/agent/: request.rs
topkio/src/backends/: backend.rs  gemini.rs  mod.rs  ollama.rs
topkio/src/primitives/: callable.rs  constants.rs  mod.rs  ollama.rs
topkio/src/providers/: mod.rs  openai.rs
topkio/src/rpc/: client.rs
ui/: package.json
ui-client/: tailwind.config.ts
ui-client/app/: page.tsx
ui-client/components/: advanced-controls.tsx  chat-interface.tsx  json-viewer.tsx  message-bubble.tsx  providers.tsx
ui-client/hooks/: use-advanced-settings.tsx  use-chat-completion.tsx
ui-client/types/: chat.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: advanced-controls.tsx  chat-interface.tsx  message-bubble.tsx  provider-icon.tsx  providers.tsx
ui/hooks/: use-providers.tsx
ui/styles/: globals.css
