[workspace]
resolver = "2"
members = [
    "topkio",
    "topkio-core", 
    # "topkio-server",
    # "topkio-providers",
    # "topkio-config",
    "topkio-ollama",
    "topkio-gemini",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"