[package]
name = "topkio-service"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
toml.workspace = true
anyhow.workspace = true
topkio-ollama = { path = "../providers/ollama" }
topkio-google = { path = "../providers/google" }
topkio-core = { path = "../core" }