[package]
name = "topkio-core"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/topkio.rs.git"
readme = "README.md"
keywords = ["ai", "llm", "framework", "openai"]
license = "MIT"
description = "Multi-Agent Collaboration Framework."

[dependencies]
