[package]
name = "topkio-server"
version.workspace = true
edition.workspace = true

[dependencies]
topkio-core = { path = "../topkio-core" }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }