[package]
name = "topkio"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/topkio.rs.git"
readme = "README.md"
keywords = ["ai", "llm", "framework", "openai"]
license = "Apache-2.0"
description = "topkio is an innovative and high-performance large language model framework."

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
futures-util = "0.3.31"
regex = "1.11.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }