[package]
name = "topkio"
version = "0.1.3"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/topkio.rs.git"
readme = "README.md"
keywords = ["ai", "llm", "framework", "openai"]
license = "Apache-2.0"
description = "Not all AI agent frameworks are called topkio."

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
futures-util = "0.3.31"
async-trait = "0.1.85"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }