[package]
name = "topkio-google"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
async-trait.workspace = true
topkio-primitive ={ path = "../../primitive"}
futures-util.workspace = true